# icml26-repro-vMcu1h3fOV-joint-ard-sparsification

./: .gitignore  CLAIM1_APPROACH_LEDGER.md  CLAIM1_PAPER_SCALE_REPORT.md  README.md  STATUS.md  logbook.json  pyproject.toml  requirements.txt
.trackio/: metadata.json
.trackio/logbook/: README.md  index.html  logbook.json
docs/: paper.txt
evidence/: claim1_paper_scale_bundle.json
outputs/: c1_sparse_robust.csv  c2_closed_form_ascent.csv  summary.json
outputs/claim1_paper_scale/: route01_synthetic.csv  route02_boston.csv  route03_yacht.csv  route04_concrete.csv  route05_energy.csv  route06_carbon.csv  route07_protein.csv  route07_sensitivity.json  route08_power.csv  route09_kin8nm.csv  route10_elevators.csv  validation.json
pages/claim-1-paper-scale-exactly-10/: page.md
pages/claim-1-sparse-robust/: page.md
pages/claim-2-all-schemes/: page.md
pages/claim-2-closed-form-em-ascent/: page.md
pages/claim-2-closed-form-updates/: page.md
pages/claim-3-robust-baselines/: page.md
pages/methods-environment/: page.md
pages/negative-controls/: page.md
repro/src/: ard.py  audit_claim2_all_schemes_independent.py  bundle_claim1_artifacts.py  claim1_datasets.py  claim1_paper_scale.py  claim1_publish_gate.py  claim3_table3.py  claim4_faithful.py  paper_scale_ard.py  route07_sensitivity.py  run_campaign.py  run_claims.py  verify_ard.py  verify_ard_schemes.py  verify_claim1_paper_scale.py  verify_claim2_all_schemes.py  verify_claim4_faithful.py  verify_joint_ard_robust.py  verify_joint_ard_robust_scale.py
repro/tests/: test_ard.py  test_claim1_datasets.py  (+4 more)
(+16 files in other folders)
