[project]
name = "joint-ard-reproduction"
version = "0.1.0"
description = "Claim-by-claim reproduction of arXiv:2605.29908"
requires-python = ">=3.12,<3.13"
dependencies = [
  "marimo==0.18.4",
  "matplotlib==3.10.8",
  "numpy==2.5.1",
  "openpyxl==3.1.5",
  "pandas==3.0.3",
  "requests==2.34.2",
  "scikit-learn==1.9.0",
  "scipy==1.18.0",
  "xlrd==2.0.2",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["repro/tests"]
